[gd_scene load_steps=10 format=3 uid="uid://c3ypj135jxvjd"]

[ext_resource type="PhysicsMaterial" uid="uid://cnfo7swlk8npp" path="res://scenes/ball-components/ball_physics_material.tres" id="1_c01jm"]
[ext_resource type="Script" uid="uid://djt8v3mxy0ylo" path="res://scripts/balls/cue_ball.gd" id="1_tbouf"]
[ext_resource type="PackedScene" uid="uid://44xiejg5nsq6" path="res://scenes/ball-components/cue_sprite.tscn" id="3_gpc2f"]
[ext_resource type="Texture2D" uid="uid://reh0mkbm5u42" path="res://visuals/pointer/Dotted-Line Texture.png" id="4_datkq"]
[ext_resource type="PackedScene" uid="uid://dsr4uau6ubum8" path="res://scenes/ball-components/pool_stick.tscn" id="7_h5tuf"]
[ext_resource type="Script" uid="uid://bitk0caq6f2sd" path="res://scripts/ball-components/progress_bar.gd" id="7_li0g8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nkrrx"]
radius = 20.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_nkrrx"]
blend_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_li0g8"]
radius = 93.00538

[node name="CueBall" type="RigidBody2D"]
process_mode = 1
physics_material_override = ExtResource("1_c01jm")
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_tbouf")
sprite_path = NodePath("CueSprite")

[node name="CueSprite" parent="." instance=ExtResource("3_gpc2f")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nkrrx")

[node name="PointerLine" type="Line2D" parent="."]
texture_repeat = 2
material = SubResource("CanvasItemMaterial_nkrrx")
width = 75.0
texture = ExtResource("4_datkq")
texture_mode = 1

[node name="RayCast2D" type="RayCast2D" parent="."]
collide_with_areas = true

[node name="PoolStick" parent="." instance=ExtResource("7_h5tuf")]
visible = false

[node name="NonRotate" type="Node2D" parent="."]

[node name="MotionLabel" type="Label" parent="NonRotate"]
visible = false
offset_left = -40.0
offset_top = -56.0
offset_right = 40.0
offset_bottom = -32.0
text = "FALSE"
horizontal_alignment = 1

[node name="SpeedLabel" type="Label" parent="NonRotate"]
visible = false
offset_left = -320.0
offset_top = -80.0
offset_right = 320.0
offset_bottom = -56.0
text = "0.00"
horizontal_alignment = 1

[node name="CountLabel" type="Label" parent="NonRotate"]
visible = false
offset_left = -19.0
offset_top = 60.0
offset_right = 21.0
offset_bottom = 83.0
text = "0"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="NonRotate"]
unique_name_in_owner = true
visible = false
offset_left = -129.0
offset_top = 29.0
offset_right = 129.0
offset_bottom = 56.0
max_value = 50.0
script = ExtResource("7_li0g8")

[node name="ExplosionArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="ExplosionCollision" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_li0g8")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
